<resources>
    <string name="app_name">速领薪</string>
    <string name="home_page">首页</string>
    <string name="home_desc_title">企业员工福利平台</string>
    <string name="home_desc_detail">速领薪是神州数字(港股代码：08255.HK)旗下专注于帮助合作企业员工解决短期小额资金周转难题的金融平台，5分钟申请，2小时放款</string>
    <string name="login">登录</string>
    <string name="attention_wx">关注微信公众号</string>

    <!-- 登录页 -->
    <string name="phone_hint">请输入手机号码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="code_hint">请输入短信验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="agree_str">我已阅读并同意</string>
    <string name="user_protocol">《用户协议》</string>
    <string name="forget_pwd">忘记密码?</string>

    <!-- 找回密码 -->
    <string name="find_pwd_str">找回密码</string>
    <string name="change_pwd_str">修改密码</string>
    <string name="next_step">下一步</string>
    <string name="input_new_pwd">请输入新密码(6-20位)</string>

    <string name="find_code_hint">短信验证码</string>
    <string name="find_idcard_hint">您注册时的身份证号</string>
    <!-- 密码成功 -->
    <string name="congratulation">恭喜您，新密码设置成功！</string>
    <string name="over_str">完成</string>
    <!-- 调查问卷 -->
    <string name="question_title">调查问卷</string>
    <string name="ques_desc_str">由于用户过于热情，借款量爆棚，目前暂停全面放款，您可以持续关注速领薪公众号，最新活动福利随时掌握！\n请填写调查问卷，我们会向您发送借款资格，并且会选出优秀的建议，送出5张10元现金抵扣卷！</string>
    <string name="ques_credit">您是否有信用卡？(单选)</string>
    <string name="ques_loan_history">您是否在其他平台借过款？(单选)</string>
    <string name="ques_days">您最希望的借款期限？(单选)</string>
    <string name="ques_money_count">您最希望的借款金额？(单选)</string>
    <string name="ques_purpose">您的借款用途？</string>
    <string name="have">有</string>
    <string name="none">无</string>
    <string name="ques_days_7">7天</string>
    <string name="ques_days_14">14天</string>
    <string name="ques_days_21">21天</string>
    <string name="ques_days_30">30天</string>

    <string name="ques_count_500">500元</string>
    <string name="ques_count_1000">1000元</string>
    <string name="ques_count_2000">2000元</string>
    <string name="ques_count_3000">3000元</string>
    <string name="ques_count_5000">5000元</string>

    <string name="hint_purpose">请填写您的借款用途</string>
    <string name="commit">提交</string>

    <string name="toast_phone_err">只支持手机号码！</string>
    <string name="toast_pwd_err">支持6-20位密码</string>
    <string name="toast_code_err">请输入正确的验证码!</string>
    <string name="toast_cb_err">请勾选并同意协议</string>
    <string name="toast_pwd_diff_err">两次输入的密码不同</string>
    <string name="toast_idcard_err">请输入身份证号！</string>

    <string name="toast_ques_credit">请选择您是否有信用卡</string>
    <string name="toast_ques_loan_history">请选择您是否在其他平台借过款</string>
    <string name="toast_ques_days">请选择您最希望的借款期限</string>
    <string name="toast_ques_money_count">请选择您最希望的借款金额</string>
    <string name="toast_ques_purpose">请填写您的借款用途</string>

    <string name="toast_net_err">网络连接异常，请稍后重试一次吧-_-!</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="title_activity_test3">Test3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test31">Test31Activity</string>

</resources>
