<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/blue_title_bg"
        android:gravity="center"
        android:text="@string/find_pwd_str"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="14dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="18dp"
                android:text="@string/ques_desc_str"
                android:textColor="@color/gray_6"
                android:textSize="@dimen/text_size_common_16" />

            <TextView
                style="@style/question_title"
                android:text="@string/ques_credit" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_credit_have"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:background="@drawable/selector_rb_color_bg"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_rb_btn_bg"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/have"
                    android:textColor="@color/text_color_6" />


            </RadioGroup>


        </LinearLayout>
    </ScrollView>
</LinearLayout>