<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/home_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="center"
                android:text="@string/home_page"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_title" />

            <ImageView
                android:id="@+id/icon_slx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:src="@mipmap/icon_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/home_desc_title"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_common_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:paddingBottom="@dimen/app_desc_padbottom"
                android:paddingLeft="@dimen/app_desc_padlr"
                android:paddingRight="@dimen/app_desc_padlr"
                android:paddingTop="@dimen/app_desc_padtop"
                android:text="@string/home_desc_detail"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_small_14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/btn_h_marg_lr"
                android:layout_marginRight="@dimen/btn_h_marg_lr"
                android:background="@drawable/bg_login"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="4dp"
                android:text="@string/login"
                android:textColor="@color/login_blue"
                android:textSize="@dimen/text_size_big_18" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:scaleType="centerInside"
                android:src="@mipmap/qrcode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/attention_wx"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_common_16" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>