<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_login_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_title" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="36dp"
                android:layout_marginTop="36dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_login_slx" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="@dimen/common_paddleft"
                android:textColor="@color/text_color_9"
                android:textColorHint="@color/text_color_9"
                android:textSize="@dimen/text_size_common_16" />

            <ImageView
                android:id="@+id/iv_phone_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/common_paddleft"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_del" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="@dimen/common_paddleft"
                android:paddingLeft="@dimen/common_paddleft"
                android:paddingRight="@dimen/common_paddleft"
                android:textColor="@color/text_color_9"
                android:textColorHint="@color/text_color_9"
                android:textSize="@dimen/text_size_common_16" />

            <ImageView
                android:id="@+id/iv_pwd_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/common_paddleft"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_see" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/code_hint"
                android:inputType="number"
                android:maxLength="6"
                android:padding="@dimen/common_paddleft"
                android:paddingLeft="@dimen/common_paddleft"
                android:paddingRight="@dimen/common_paddleft"
                android:textColor="@color/text_color_9"
                android:textColorHint="@color/text_color_9"
                android:textSize="@dimen/text_size_common_16" />

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:padding="@dimen/common_paddleft"
                android:scaleType="centerInside"
                android:text="@string/get_code"
                android:textColor="@color/login_blue"
                android:textColorHint="@color/text_color_9"
                android:textSize="@dimen/text_size_common_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginBottom="@dimen/common_paddleft"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="@dimen/common_paddleft"
                android:background="@drawable/selector_cb_bg"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/home_desc_title"
                android:textColor="@color/text_color_9"
                android:textSize="@dimen/text_size_small_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_protocol"
                android:textColor="@color/login_blue"
                android:textSize="@dimen/text_size_small_14" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="18dp"
            android:background="@color/login_blue"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/color_white" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/forget_pwd"
            android:textColor="@color/gray_6" />

    </LinearLayout>

</ScrollView>